Bug 349: edit stub description from stub edit dialog. minor changes to other scenario related code
git-svn-id: svn://cserg0.site.uottawa.ca/projetseg/trunk@916 1d5a7336-c65e-6947-a78c-d4236001c669